--- a/client/config.yaml
+++ b/client/config.yaml
@@ -4,6 +4,7 @@ common:
   send_buffer_size: 0  # 1MB // tcp buffer size - overwrite kernel default 
   receive_buffer_size: 0 # 1MB // tcp buf.....................
   no_ack: false       # If true, disable ack client and server (full speed send!), false = ack after every chunk(data) msg
+  ack_after: 10      #to be used with no_ack = false ,  server will send ack after {number} and client will wait for ack
 
 client:
   broker_tcp_address: "tcp://localhost:5559"
