--- a/client/config.yaml
+++ b/client/config.yaml
@@ -3,13 +3,13 @@
 common:
   send_buffer_size: 0  # 1MB // tcp buffer size - overwrite kernel default 
   receive_buffer_size: 0 # 1MB // tcp buf.....................
-  no_ack: true       # If true, disable ack client and server (full speed send!), false = ack after {number} chunk(data) msg
-  ack_after: 10      #to be used with no_ack = false ,  server will send ack after {number} and client will wait for ack
+  no_ack: false       # If true, disable ack client and server (full speed send!), false = ack after {number} chunk(data) msg
+  ack_after: 10     #to be used with no_ack = false ,  server will send ack after {number} and client will wait for ack
   tcp_full_clear: false #to be used with ack , waits for ack from all server worker . i.e fully drain the tcp socket 
 
 client:
-  broker_tcp_address: "tcp://localhost:5559" #"tcp://13.201.191.160:5559" 
+  broker_tcp_address: "tcp://localhost:5559" #"tcp://172.31.0.66:5559" 
   chunk_size:  1048576   # chunk size in bytes   #1048576 1mb
-  number_of_workers: 2
+  number_of_workers: 1
   file_path: "100MB.txt"
   high_water_mark: 0 # block send if {number} message in que
